fix: Resolve menu item layout issues now that images are layed out differently

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -80,19 +80,6 @@ div[class*="language-ascii"] pre[class*="language-ascii"] {
   line-height: 1em;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  ::before {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
 div > figure,
 div > img {
   display: block;
